# LangPDF

./: .gitignore  README.md  frontend.py  pyproject.toml  requirements.txt
backend/: main.py
backend/classes/: RAG_Pipeline.py  RAG_chains.py  addVector.py  chat.py  proccessing.py
chrome-extension/: .gitignore  manifest.json  package.json  setup.sh  tsconfig.json  webpack.config.js
chrome-extension/src/background/: background.ts
chrome-extension/src/components/: ChatInterface.tsx  FileUpload.tsx
chrome-extension/src/icons/: README.md
chrome-extension/src/popup/: App.tsx  index.tsx  popup.html
chrome-extension/src/services/: api.ts
chrome-extension/src/types/: index.ts
